feat: 优化或者调整功能

--- a/src/doc/works/4.js事件循环.md
+++ b/src/doc/works/4.js事件循环.md
@@ -1,3 +1,49 @@
+### ‌核心回答
+
+> JavaScript 的事件循环（Event Loop）是处理异步代码执行的核心机制。由于 JS 是‌**单线程**‌的，它通过事件循环实现非阻塞的异步行为，确保主线程不被耗时操作阻塞。以下是关键点：
+
+- #### **1. 核心组成**‌
+
+  - ‌调用栈(Call Stack)：跟踪当前执行的函数，后进先出（LIFO）。
+  - ‌**Web APIs**‌：浏览器提供的异步 API（如 `setTimeout`, `fetch`），处理完任务后会将回调推入任务队列。
+  - ‌任务队列（Task Queue）：分为 ‌宏任务队列（MacroTask Queue）和 ‌微任务队列（MicroTask Queue）
+    - ‌**宏任务**‌：`setTimeout`、`setInterval`、I/O 操作、UI 渲染。
+    - ‌**微任务**‌：`Promise.then`、`MutationObserver`、`queueMicrotask`。
+
+- ------
+
+  #### ‌**2. 事件循环的工作流程**‌
+
+  1. ‌**执行同步代码**‌：先处理调用栈中的同步代码。
+  2. ‌处理异步任务‌：遇到异步操作（如 `setTimeout`），交给 Web APIs 处理，完成后将回调推入对应队列。
+  3. ‌轮询队列‌：
+     - ‌**清空微任务队列**‌：每轮事件循环结束前，必须执行完所有微任务。
+     - ‌**执行一个宏任务**‌：从宏任务队列中取出一个任务执行。
+  4. ‌**重复循环**‌：直到所有队列为空。
+
+- #### ‌**3. 关键规则**‌
+
+  - ‌**微任务优先级 > 宏任务**‌：同一轮循环中，微任务会在宏任务之前执行。
+  - ‌**渲染时机**‌：浏览器可能在宏任务之间进行 UI 渲染。
+
+- ### 示例代码分析
+
+  - ```js
+    console.log("1"); // 同步代码
+    
+    setTimeout(() => console.log("2"), 0); // 宏任务
+    
+    Promise.resolve().then(() => {
+      console.log("3"); // 微任务
+    });
+    
+    console.log("4"); // 同步代码
+    
+    // 输出顺序为 1 → 4 → 3 → 2
+    ```
+
+### 更多详解
+
 ### 为什么 js 是单线程？
 
 - js 作为主要运行在浏览器的脚本语言，js 主要用途之一是操作 DOM。
@@ -36,3 +82,6 @@
 > 宏任务 > 所有微任务 > 宏任务，如下图所示：
 
 - ![js事件循环](https://p1-jj.byteimg.com/tos-cn-i-t2oaga2asx/gold-user-assets/2018/6/16/164081cfd8400f92~tplv-t2oaga2asx-jj-mark:3024:0:0:0:q75.awebp)
+
+
+
