doc: 新增对vue的provide和inject解释

--- a/src/doc/works/6.Next.js 的四种渲染方式（CSR、SSG、SSR、ISR）.md
+++ b/src/doc/works/6.Next.js 的四种渲染方式（CSR、SSG、SSR、ISR）.md
@@ -65,19 +65,19 @@
     > Next.js 允许你创建具有动态路由的页面。例如，你可以创建一个名为 pages/posts/[id].js 的文件来显示基于 id 的单个博客文章。这将允许你在访问 posts/1 时显示带有 id: 1 的博客文章。
 
   ```js
-  // This function gets called at build time
+  // 此函数在构建时被调用。
   export async function getStaticPaths() {
-    // Call an external API endpoint to get posts
+    // 调用外部 API 接口来获取帖子
     const res = await fetch("https://.../posts");
     const posts = await res.json();
 
-    // Get the paths we want to pre-render based on posts
+    // 根据帖子获取我们想要预渲染的路径
     const paths = posts.map((post) => ({
       params: { id: post.id },
     }));
 
-    // We'll pre-render only these paths at build time.
-    // { fallback: false } means other routes should 404.
+    // 我们将在构建时仅对这些路径进行预渲染。
+    // { fallback: false } 这意味着其他路径应返回 404 错误。
     return { paths, fallback: false };
   }
   ```
