doc: 文章格式修改

--- a/src/doc/works/7.vue里的provide和inject.md
+++ b/src/doc/works/7.vue里的provide和inject.md
@@ -1,8 +1,8 @@
 ### 1. 核心概念‌
 
-- ‌**provide (提供)**‌
+- ‌**provide (提供)**
   在父组件/祖先组件中使用，定义要传递给后代的数据（可以是对象、函数、响应式数据等）。
-- **inject (注入)**‌
+- **inject (注入)**
   在后代组件中使用，接收祖先组件通过 `provide` 提供的数据。
 
 ### 2. 基本用法
