--- a/src/doc/works/9.智慧校园分析.md
+++ b/src/doc/works/9.智慧校园分析.md
@@ -11,6 +11,10 @@
 3. **云计算：** 提供弹性的计算、存储和网络资源，支撑海量数据处理和应用部署。
 4. **人工智能：** 基于数据进行分析、预测、决策、推荐（如**智能排课、学生画像、风险预警**）。
 5. **统一身份认证/单点登录：** 用户一个账号访问所有授权系统。
+   - 微信H5授权
+     - **核心流程：** 用户访问你的H5页面 -> 引导用户点击或自动跳转到微信授权页面 -> 用户同意授权 -> 微信重定向回你的后端指定地址并携带`code` -> 你的后端用`code`换取`access_token`和`openid` -> 用`access_token`获取用户信息。
+   - 微信小程序授权
+     - **核心流程：** 用户进入小程序 -> 小程序调用`wx.login`获取临时`code` -> 发送`code`给开发者服务器 -> 服务器用`code`+`appid`+`secret`换`session_key`和`openid` -> 用户主动触发按钮调用`wx.getUserProfile`(基础库2.27.1起) 或 `<button open-type="getUserInfo">`获取用户信息 -> 小程序将加密的用户信息发送给服务器 -> 服务器用`session_key`解密。
 6. **数据中台/平台：** 打破数据孤岛，实现数据统一管理和服务。
 
 #### 目的与价值
